force-app/main/default/objects/OrderItem/fields/Billing_Start_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Offset_Days__c</fullName>
    <description
  >Days after Order.EffectiveDate that this line begins billing. Mirrors OpportunityLineItem.Billing_Start_Offset_Days__c. 0 = bill from day one; negatives allowed for prepaid.</description>
    <inlineHelpText
  >Offset (days) from Order Effective Date before this line bills.</inlineHelpText>
    <label>Billing Start Offset (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>