force-app/main/default/objects/OrderItem/fields/Implementation_Phase__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Phase__c</fullName>
    <description
  >Which delivery phase this Order line belongs to. Mirrors OpportunityLineItem.Implementation_Phase__c via the Order-creation flow.</description>
    <inlineHelpText
  >Implementation phase for this Order line item.</inlineHelpText>
    <label>Implementation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
                <default>true</default>
                <label>Phase 1</label>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>