force-app/main/default/objects/OrderItem/fields/Product_Family_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Rollup__c</fullName>
    <description
  >Formula Text mirroring Product2.Family onto the Order line so reports group by family without an additional join. Traverses through PricebookEntry for parity with the OLI/QLI formulas (PricebookEntryId is always set on OrderItem inserts done via the Generate-Order accelerator).</description>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <inlineHelpText
  >Auto-pulled from the related Product2's Family.</inlineHelpText>
    <label>Product Family (Rollup)</label>
    <type>Text</type>
</CustomField>