force-app/main/default/objects/OrderItem/fields/Requires_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Requires_Provisioning__c</fullName>
    <description
  >Formula Checkbox: true when this Order line's product family demands provisioning (Core Platform or AI Dispatch Add-On). The Order trigger sums this across the lines to decide whether to publish Provisioning_Requested__e and stamp Requires_AI_Dispatch_Setup__c on the parent Order.</description>
    <formula>OR(
  TEXT(PricebookEntry.Product2.Family) = "Core Platform",
  TEXT(PricebookEntry.Product2.Family) = "AI Dispatch Add-On"
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >True when the product family needs provisioning. Auto-calculated.</inlineHelpText>
    <label>Requires Provisioning</label>
    <type>Checkbox</type>
</CustomField>