force-app/main/default/objects/OrderItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description
  >Revenue classification for this Order line. Mirrors OpportunityLineItem.Revenue_Type__c. Drives the recurring vs. one-time treatment on the resulting Contract.</description>
    <inlineHelpText
  >How this Order line is recognized for revenue.</inlineHelpText>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>