force-app/main/default/objects/OrderItem/fields/Source_OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>Source_OpportunityLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The OLI on the source Opportunity that produced this OrderItem. Populated by the Northstar Order-creation wrapper — the vendor Generate-Order controller does not set it. Useful for line-level revenue lineage.</description>
    <inlineHelpText>The OLI this Order line was generated from.</inlineHelpText>
    <label>Source Opportunity Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Generated Order Items</relationshipLabel>
    <relationshipName>Generated_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>