force-app/main/default/objects/OrderItem/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description
  >Per-line support tier on this Order. Lets a single Order mix tiers across products. Mirrors OpportunityLineItem.Support_Tier__c.</description>
    <inlineHelpText
  >Support tier for this Order line (can differ from the Order default).</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Support_Tier</valueSetName>
    </valueSet>
</CustomField>