force-app/main/default/objects/OrderItem/fields/Usage_Band__c.field-meta.xml
<CustomField>
    <fullName>Usage_Band__c</fullName>
    <description
  >For Revenue_Type__c = 'Usage' lines: committed usage tier. Mirrors OpportunityLineItem.Usage_Band__c. Ignored on non-usage lines.</description>
    <inlineHelpText>Usage tier for usage-based Order lines.</inlineHelpText>
    <label>Usage Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>